--- a/templates/content.mustache
+++ b/templates/content.mustache
@@ -46,52 +46,54 @@
                             <div class="img-course" style="background-image : url('{{ urlimg }}')" alt=""></div>
                         </a>
                     </div>
-                    <div class="card-block p-2 card-title">
-                        <p class="course_title">
-                            <a href="{{ url }}">{{{ fullname }}}</a>
-                        </p>
-                        <div class="course-category">
-                            <div class="card-text d-flex">
-                    <span><a href="{{{ rootpath }}}/course/index.php?categoryid={{ category }}
-                        ">{{{ categoryname }}}</a></span>
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-primary modalbutton ml-auto" data-toggle="modal" data-target="#modal-{{ id }}">
-                                    <i class="fa fa-info" aria-hidden="true"></i>
-                                </button>
-                                <!-- Modal -->
-                                <div class="modal fade" id="modal-{{ id }}" tabindex="-1" aria-labelledby="{{{ name }}}" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title">{{{ name }}}</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                {{{ summary }}}
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">{{#str}}close, theme_pimenko{{/str}}</button>
-                                            </div>
+                    <div class="card-block p-2 d-flex flex-row">
+                        <div class="courseinfo align-self-center">
+                            <p class="course_title"><a href="{{ url }}">{{{ fullname }}}</a></p>
+                            <p class="categoryname text-muted">{{{ categoryname }}}</p>
+                            {{#tagslist}}
+                                <div class="tagslist">
+                                    {{{tagslist}}}
+                                </div>
+                            {{/tagslist}}
+                        </div>
+                        <div class="coursemodal ml-auto align-self-center">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary modalbutton ml-auto" data-toggle="modal" data-target="#modal-{{ id }}">
+                                <i class="fa fa-info" aria-hidden="true"></i>
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="modal-{{ id }}" tabindex="-1" aria-labelledby="{{{ name }}}" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">{{{ fullname }}}</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            {{{ summary }}}
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">{{#str}}close, theme_pimenko{{/str}}</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card-block p-2 course-data">
+                    <div class="card-block p-2 course-data mt-auto">
+                        <div class="card-text custom-fields">
+                            {{# customfields}}
+                                <span>{{{customfield}}}</span><br>
+                            {{/customfields}}
+                        </div>
                         <div class="card-text">
                             <div class="course-enrolments">
                                 {{#enroledcount}}
                                     <i class="icon fa fa-user fa-fw"></i>{{ enroledcount }}
                                 {{/enroledcount}}
                             </div>
-                        </div>
-                        <div class="card-text custom-fields">
-                            {{# customfields}}
-                                <span>{{{customfield}}}</span><br>
-                            {{/customfields}}
                         </div>
                     </div>
                 </div>
