[PIMDEV-393] Changed border style card

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@
     background: none;
 }
 
+.block_pimenkofeaturedcourses #course-gallery .course-gallery {
+    border:1px solid rgba(0,0,0,.125);
+}
+
 .block_pimenkofeaturedcourses .modalbutton {
     border-radius: 100%;
     height: 35px;
